qunit test for kirki.setting.get

--- a/tests/qunit/index.html
+++ b/tests/qunit/index.html
@@ -14,8 +14,8 @@
 	<script src="https://code.jquery.com/qunit/qunit-2.4.1.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-	<script src="../../controls/js/src/kirki.js"></script>
-	<script src="tests.js"></script>
+	<script src="../../controls/js/src/kirki.setting.js"></script>
+	<script src="kirki.setting-test.js"></script>
 </body>
 
 </html>
